@@ -1,0 +1,201 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<refentry xmlns='http://docbook.org/ns/docbook' version='5.0' xml:lang='en' xml:id='idents'>
+<refmeta>
+    <refentrytitle>IDENTS</refentrytitle>
+    <manvolnum>5</manvolnum>
+    <refmiscinfo class='source'>BRL-CAD</refmiscinfo>
+    <refmiscinfo class='manual'>BRL-CAD File Formats</refmiscinfo>
+</refmeta>
+
+<refnamediv>
+<refname>idents</refname>
+<refpurpose>BRL-CAD idents file format</refpurpose>
+</refnamediv>
+<!-- body begins here -->
+
+<refsection xml:id='format'><title>FORMAT</title>
+
+<para>An <emphasis remap='I'>idents</emphasis> file is a line-based
+plain text file containing identifiers, properties, and path
+information for BRL-CAD geometry.  Typically generated by the
+<command>idents</command> command in <application>mged</application>
+or <application>archer</application>, the idents file contains
+information for a list of regions.  The identifier data written for
+each region includes a sequential region count, a region identifier
+(a.k.a. the "ident" number), an air code, a material code, a
+line-of-sight (a.k.a. "LOS") thickness factor, and the path to the
+region.
+</para>
+
+<para>Each line constitutes a record.  Lines with non-whitespace in
+the first character position of the line (i.e., character position 0)
+are considered comments.  By default, there is both a header and a
+footer with additional information including the file name, title,
+units, objects, and details on the file's original creation.
+</para>
+
+<para>Lines beginning with a space (i.e., character position 0) are
+considered region records with six columns separated by whitespace.
+As region paths may contain spaces, the last column continues until an
+end-of-line colon (:) character.  The columns are described in
+following:
+</para>
+
+<variablelist remap="TP">
+  <varlistentry>
+    <term>column 1: region Count</term>
+    <listitem>
+      <para>
+        For output purposes only, each region is assigned a number
+        based as it's encountered in the output hierarchy.
+      </para>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
+    <term>column 2: region ID</term>
+    <listitem>
+      <para>
+        Region identifiers for solid geometry are non-zero numbers
+        representing a single homogeneous material object (i.e., a
+        part).  This value is encoded as the "region_id" attribute on
+        region objects.
+      </para>
+      <para>Region IDs need not be unique, but may be reassigned
+      uniquely using the <command>reid</command> command in MGED.
+      </para>
+      <para>Negative region IDs canonically indicate an air region.
+      </para>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
+    <term>column 3: air code ID</term>
+    <listitem>
+      <para>All regions representing "air" can have an identifier
+      number set on them, encoded as a positive-valued "aircode"
+      attribute on region objects.  Regions marked as air are
+      typically handled differently by applications (e.g., the
+      <command>rt</command> utility ignores them by default during
+      rendering unless the <option>-U</option> option is specified).
+      Air regions also can exhibit different overlap behavior.
+      </para>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
+    <term>column 4: material ID</term>
+    <listitem>
+      <para>All regions can have a material identifier set on them,
+      encoded as a non-negative "material_id" number.  All objects
+      consisting of the same material typically are encoded with the
+      same material ID value.  What the value represents is encoded in
+      a separate file, table, or object and can be extracted using
+      various commands (e.g., see the <command>material</command> and
+      <command>mater</command> commands in MGED).
+      </para>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
+    <term>column 5: line-of-sight thickness factor</term>
+    <listitem>
+      <para>All regions can have a light-of-sight thickness factor
+      (a.k.a. "los") set to indicate its proportional representation
+      of material homogeneity.  That is, it indicates what percentage
+      of a given object is the material specified.
+      </para>
+      <para>Line-of-sight factors are typically used in place of
+      modeling detail.  For example, one might model a radio that in
+      reality has circuitry, wires, air voids, and more as a simple
+      box with material_id set to a code representing aluminum and los
+      set to 10.  This would indicate, for analytic purposes, that the
+      box is 10% aluminum by volume.
+      </para>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
+    <term>column 6: geometry path</term>
+    <listitem>
+      <para>The last column contains the full path to a given region.
+      As paths may contain spaces and other characters, the path and
+      lines are terminated with a colon (:) character.
+      </para>
+    </listitem>
+  </varlistentry>
+</variablelist>
+
+
+</refsection>
+
+<refsection xml:id="examples"><title>EXAMPLES</title>
+
+<example>
+  <para>
+    <literallayout class="normal">
+1 -8    Summary Table {idents}  (written: Wed May 11 14:37:52 2022)
+2 -7         file name    : /path/to/db/moss.g
+3 -6         
+4 -5         
+5 -4         user         : Christopher Sean Morrison
+6 -3         target title : Gary Moss's "World on a Platter"
+7 -2         target units : mm
+8 -1         objects      : all.g
+
+ 1    1000    0    0    0  /all.g/platform.r:
+ 2    2000    0    0    0  /all.g/box.r:
+ 3    3000    0    0    0  /all.g/cone.r:
+ 4    4000    0    0    0  /all.g/ellipse.r:
+ 5    6000    0    0    0  /all.g/tor.r:
+ 6    1000    0    1  100  /all.g/light.r:
+* 9999999
+* 9999999
+* 9999999
+* 9999999
+* 9999999
+    </literallayout>
+</para>
+</example>
+</refsection>
+
+<refsection xml:id='utilities'><title>UTILITIES</title>
+<para><emphasis remap='mged'>mged</emphasis> and <emphasis
+remap='mged'>archer</emphasis> have several commands which set
+identifiers and read/write idents files.</para>
+</refsection>
+
+<refsection xml:id='see_also'>
+  <title>SEE ALSO</title>
+  <para>
+    <citerefentry><refentrytitle>idents</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>reid</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>remat</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>reg_def</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>material</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>mater</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>edcodes</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>rcodes</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>wcodes</refentrytitle><manvolnum>n</manvolnum></citerefentry>,
+    <citerefentry><refentrytitle>mged</refentrytitle><manvolnum>1</manvolnum></citerefentry>, and
+    <citerefentry><refentrytitle>archer</refentrytitle><manvolnum>1</manvolnum></citerefentry>.
+  </para>
+</refsection>
+
+<refsection xml:id='author'><title>AUTHOR</title>
+<para>BRL-CAD Team</para>
+
+</refsection>
+
+<refsection xml:id='copyright'><title>COPYRIGHT</title>
+<para>This software is Copyright (c) 1989-2022 by the United States
+Government as represented by U.S. Army Research Laboratory.</para>
+
+</refsection>
+
+<refsection xml:id='bug_reports'><title>BUG REPORTS</title>
+<para>Reports of bugs or problems should be submitted via electronic
+mail to <email>devs@brlcad.org</email></para>
+</refsection>
+</refentry>
+
